# SeetaFaceEngine

./: .gitattributes  .gitignore  CMakeLists.txt  README.md
examples/: compare_features.cpp  extract_output.cpp  face_alignment_test.cpp  feature_extractor.cpp  test_face_recognizer.cpp  test_face_verification.cpp
src/alignment/: common.h  sift.h
utils/: compare.sh  extract.sh
